[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equity_forecasting"
version = "0.1.0"
description = "Equity forecasting ML platform"
authors = [{name = "Mri"}]
requires-python = ">=3.10"

# Keep minimal — DO NOT duplicate full requirements
dependencies = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]